// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot without crashing 1`] = `
<DocumentFragment>
  <div
    class="Button"
  >
    <a
      exact="true"
      href="/home"
    >
      <button
        class="Button-button"
      >
        HOME
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders snapshot without crashing 2`] = `
<DocumentFragment>
  <div
    class="Button"
  >
    <a
      exact="true"
      href="/about"
    >
      <button
        class="Button-button"
      >
        ABOUT
      </button>
    </a>
  </div>
</DocumentFragment>
`;
